Net utility is using URI instead of URL